# MCP-OracleSQL-Connection

./: .env.example  .gitignore  README.md  conexion_info.md  oauth.py  pyproject.toml  run.sh  server.py
