[project]
name = "consulta-db-mcp"
version = "0.1.0"
description = "MCP server for read-only queries against the Oracle SQL production-view database"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.2.0",
    "oracledb>=2.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "setproctitle>=1.3.0",
]

[tool.uv]
package = false
